--- a/db_config.ini
+++ b/db_config.ini
@@ -1,6 +1,6 @@
 [DATABASE]
 host = localhost
-port = 3306
+port = 
 user = root
-password = Manuj2005#
-database = railway
+password = 
+database = 
